--- a/templates/_userComScripts.html.twig
+++ b/templates/_userComScripts.html.twig
@@ -24,3 +24,29 @@
         {% endif %}
     </script>
 {% endif %}
+
+<!-- Google tag (gtag.js), plugin provided by Spinbits -->
+{% dump %}
+<script async src="https://www.googletagmanager.com/gtag/js?id={{ id }}{{ url_suffix|raw }}"></script>
+<script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){window.dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', '{{ id }}');
+    if (window.performance) {
+        gtag('event', 'timing_complete', {
+            'name': 'load',
+            'value': Math.round(performance.now()),
+            'event_category': 'JS Dependencies'
+        });
+    }
+    {% if app.session is not null and app.session.started %}
+    {% set events = app.session.bag('spinbits_ga4_events').all %}
+    {% for event, content in events %}
+    {% for c in content %}
+    gtag("event", "{{ event }}", {{ c|raw }});
+    {% endfor %}
+    {% endfor %}
+    console.log({{ events|json_encode|raw }})
+    {% endif %}
+</script>
