Add GTM config to admin panel and remove google analytics invalid naming convention

--- a/templates/UserApiResource/_userComCredentials.html.twig
+++ b/templates/UserApiResource/_userComCredentials.html.twig
@@ -1,4 +1,5 @@
 <div class="ui attached segment">
     {{ form_row(form.userComApiKey) }}
     {{ form_row(form.userComUrl) }}
+    {{ form_row(form.userComGTMContainerId) }}
 </div>
