[UC-22] Upgrade to Sylius 2.0/2.1

--- a/templates/UserApiResource/_userComCredentials.html.twig
+++ b/templates/UserApiResource/_userComCredentials.html.twig
@@ -1,3 +1,5 @@
+{% set form = hookable_metadata.context.form %}
+
 <div class="ui attached segment">
     {{ form_row(form.userComApiKey) }}
     {{ form_row(form.userComUrl) }}
